# terraform-drift-detector

./: .gitignore  Dockerfile  Dockerfile.txt  README.md  SPEC.md  create_dockerfile.py  driftctl.db-shm  driftctl.db-wal  pyproject.toml  render.yaml
configs/: driftctl.yaml
driftctl/: cli.py  config.py  models.py
driftctl/api/: middleware.py  server.py
driftctl/api/routes/: health.py  scans.py  workspaces.py
driftctl/api/static/: index.html
driftctl/engine/: drift.py  remediate.py
driftctl/providers/: aws.py  base.py  registry.py
driftctl/report/: json_renderer.py  table_renderer.py
driftctl/scheduler/: jobs.py
driftctl/state/: extractor.py  reader.py
driftctl/storage/: db.py
testdata/: sample.tfstate
tests/: conftest.py  test_api.py  test_aws_provider.py  test_drift_engine.py  test_remediation.py  test_smoke.py  test_state_extractor.py  test_state_reader.py  test_storage.py
tf-demo/: main.tf  terraform.tfstate  terraform.tfstate.backup
