[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftctl"
version = "1.0.0"
description = "Terraform drift detector — compares state files against live AWS infrastructure"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "typer",
    "rich",
    "pyyaml",
    "fastapi",
    "uvicorn",
    "apscheduler",

]

[project.scripts]
driftctl = "driftctl.cli:app"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "moto[ec2,s3]",
    "httpx",
    "pre-commit",
    "boto3-stubs[ec2,s3]",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
